tests/neg/i17738-toplevel-infix.check
-- [E186] Syntax Error: tests/neg/i17738-toplevel-infix.scala:13:10 ----------------------------------------------------
13 |infix val toplevelVal = ??? // error
   |          ^
   |          a toplevel val cannot be infix
-- [E186] Syntax Error: tests/neg/i17738-toplevel-infix.scala:14:10 ----------------------------------------------------
14 |infix var toplevelVar = ??? // error
   |          ^
   |          a toplevel var cannot be infix
-- [E186] Syntax Error: tests/neg/i17738-toplevel-infix.scala:15:10 ----------------------------------------------------
15 |infix def toplevelDef = ??? // error
   |          ^
   |          a toplevel def cannot be infix
-- [E186] Syntax Error: tests/neg/i17738-toplevel-infix.scala:16:12 ----------------------------------------------------
16 |infix given toplevelGiven: Int = ??? // error
   |            ^
   |            a toplevel given cannot be infix
-- [E186] Syntax Error: tests/neg/i17738-toplevel-infix.scala:17:19 ----------------------------------------------------
17 |infix implicit val topevelImplicit: Int = ??? // error
   |                   ^
   |                   a toplevel val cannot be infix
